<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/command_title"
        android:layout_gravity="center"
        >

    </TextView>

    <EditText
        android:id="@+id/a"
        android:background="@null"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/name_hint"
        />

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/command_content"
        >

    </TextView>

    <EditText
        android:selectAllOnFocus="true"
        android:id="@+id/e"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:background="@null"
        android:hint="@string/command_hint"/>

    <CheckBox
        android:layout_gravity="center"
        android:id="@+id/cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drop_root_to_shell" />
</LinearLayout>